--- a/widgets/src/styles/components/_widget.scss
+++ b/widgets/src/styles/components/_widget.scss
@@ -12,7 +12,7 @@ $block: 'tly-widget';
   &-content {
     flex-grow: 1;
     overflow-y: auto;
-    padding: 0 16px;
+    padding: 0 24px;
     padding-bottom: 86px;
 
     &::-webkit-scrollbar {
